Make checkpoint an object
- This enables implementations to determine more complex identifiers for thread history snapshots (ie. beyond a single string ID)
